#1: Add rules to prevent overflowing.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,11 +5,18 @@
     --footer-color: #0d94ff;
 }
 
+*, *::after, *::before {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     overflow: auto;
+    word-break: break-all;
 }
 
 html {
